# Giti

./: .dockerignore  .editorconfig  .gitignore  Cargo.toml  README.md  go.work  go.work.sum  task.md
.github/workflows/: ci.yml  docker-ghcr.yml
deploy/compose/: .env.example  docker-compose.ghcr.yml  docker-compose.yml  scale-smoke.sh
docs/: architecture.md  feature-parity.md  ogc-compliance.md
docs/dev/: getting-started.md
docs/ops/: scaling.md
docs/services/: auth.md  catalog.md  convert.md  frontend.md  gateway.md  tiles.md  wfs.md  wms.md  wps.md
docs/superpowers/plans/: 2026-07-16-sprint-1-skeleton-infra.md  2026-07-16-sprint-2-catalog-stores.md  2026-07-16-sprint-3-gateway.md  2026-07-16-sprint-4-auth-geofence.md  2026-07-16-sprint-5-wfs.md  2026-07-16-sprint-6-wms.md  2026-07-16-sprint-7-tiles.md  2026-07-16-sprint-8-wps-convert.md  2026-07-16-sprint-9-frontend.md  2026-07-17-sprint-E1-admin-shell-stores.md  2026-07-17-sprint-E10-compat-bench-release.md  2026-07-17-sprint-E2-layer-management.md  2026-07-17-sprint-E3-styles-sld-editor.md  2026-07-17-sprint-E4-layer-groups-preview.md  2026-07-17-sprint-E5-tile-caching.md  2026-07-17-sprint-E6-security.md  2026-07-17-sprint-E7-importer-monitor-settings.md  2026-07-17-sprint-E8-connectors.md  2026-07-17-sprint-E9-csw-wcs-rest.md
frontend/: .gitignore  Dockerfile  package-lock.json  package.json
frontend/scripts/: i18n-check.mjs
libs/geo-core/: Cargo.toml
libs/geo-core/src/: health.rs  lib.rs
libs/geo-core/src/filter/: ast.rs  corpus.rs  cql.rs  mod.rs  sql.rs
libs/ogc-kit/: go.mod
services/auth/: Dockerfile  go.mod  go.sum  main.go  main_test.go
services/catalog/: Dockerfile  go.mod  go.sum  main.go  main_test.go
services/convert/: Dockerfile  go.mod  main.go  main_test.go
services/gateway/: Dockerfile  authz.go  authz_test.go  dispatch.go  dispatch_test.go  go.mod  main.go  main_test.go  middleware.go  middleware_test.go
services/tiles/: Cargo.toml  Dockerfile
services/tiles/src/: cache.rs  events.rs  grid.rs  lib.rs  main.rs  meta.rs  mvt.rs  raster.rs  wmts.rs
services/tiles/tests/: tiles_it.rs
services/wfs/: Dockerfile  go.mod  main.go  main_test.go
services/wms/: Cargo.toml  Dockerfile
services/wms/src/: coverage.rs  encode.rs  filter_xml.rs  lib.rs  main.rs  meta.rs  ows.rs  sld.rs  wcs.rs  wms.rs
services/wms/src/render/: mod.rs  vector.rs
services/wms/tests/: render_it.rs
services/wps/: Dockerfile  go.mod  main.go  main_test.go
tests/filter-corpus/: corpus.json
tests/testdata/: data.gpkg  dem.tif  places.parquet  points.geojson
(+202 files in other folders)
