[package]
name = "tiles"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
geo-core = { path = "../../libs/geo-core" }
axum = { workspace = true }
tokio = { workspace = true }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
async-nats = "0.38"
sha2 = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde_json = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
