[package]
name = "wms"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
geo-core = { path = "../../libs/geo-core" }
axum = { workspace = true }
tokio = { workspace = true }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres"] }
geozero = { version = "0.14", features = ["with-wkb", "with-geo"] }
tiny-skia = "0.11"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
roxmltree = "0.20"
serde_json = { workspace = true }
form_urlencoded = "1"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
